--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-  <script src="script/bundle.js"></script>
+  <script src="bundle.js"></script>
 </body>
 </html>
