create backbone app model

--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+  <script>
+    var rawStudents = [
+      // [id, [lovers], [haters]]
+      { id: 1, lovers: [2], haters: [] },
+      { id: 2, lovers: [1], haters: [] },
+      { id: 3, lovers: [ ], haters: [1,4] },
+      { id: 4, lovers: [3], haters: [] },
+      { id: 5, lovers: [2], haters: [4] },
+      { id: 6, lovers: [2], haters: [] },
+    ];
+  </script>
   <script src="bundle.js"></script>
 </body>
 </html>
