create Nodes and Edges collections to establish has_many relationships b/t models

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <script>
-    var rawStudents = {
+    var raw = {
       "nodes": [
         { "id" : 1 },
         { "id" : 2 },
