--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <!--         <title></title>
   <meta name="description" content=""> -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div id="app"></div>
@@ -13,22 +14,22 @@
   <script>
     var raw = {
       "nodes": [
+        { "id" : 0 },
         { "id" : 1 },
         { "id" : 2 },
         { "id" : 3 },
         { "id" : 4 },
         { "id" : 5 },
-        { "id" : 6 },
       ],
       "edges": [
+        { "source": 0, "target": 1, "attraction": 1 },
         { "source": 1, "target": 2, "attraction": 1 },
-        { "source": 2, "target": 1, "attraction": 1 },
-        { "source": 3, "target": 1, "attraction": -1 },
-        { "source": 3, "target": 4, "attraction": -1 },
-        { "source": 4, "target": 6, "attraction": 1 },
-        { "source": 5, "target": 2, "attraction": 1 },
-        { "source": 5, "target": 4, "attraction": -1 },
-        { "source": 6, "target": 2, "attraction": 1 },
+        { "source": 2, "target": 2, "attraction": -1 },
+        { "source": 2, "target": 3, "attraction": -1 },
+        { "source": 3, "target": 5, "attraction": 1 },
+        { "source": 4, "target": 1, "attraction": 1 },
+        { "source": 4, "target": 3, "attraction": -1 },
+        { "source": 5, "target": 1, "attraction": 1 },
       ]
     }
   </script>
