add sideView with node list

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div id="app"></div>
+  <div id="app">
+    <div id="graph"></div>
+    <div id="sidebar"></div>
+  </div>
   <script src="bundle.js"></script>
 </body>
 </html>
